[package]
name = "yscl"
version = "1.0.0"
edition = "2021"
authors = ["Kyle Lin <kylejlin.us@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/kylejlin/yscl"
repository = "https://github.com/kylejlin/yscl/tree/main/yscl-rs"
description = "A YSCL parser."
readme = "README.md"
keywords = ["yscl", "parser", "config"]
categories = ["command-line-interface", "parser-implementations", "config"]
